[package]
name = "bip39"
version = "1.0.0-rc1"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bip39/"
repository = "https://github.com/rust-bitcoin/rust-bip39/"
documentation = "https://docs.rs/bip39/"
description = "Library for BIP-39 Bitcoin mnemonic codes"
keywords = [ "crypto", "bitcoin", "bip39", "mnemonic" ]
readme = "README.md"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
default = [ "std" ]
core = []
std = [ "core", "unicode-normalization", "serde/std" ]

# Note: English is the standard for bip39 so always included
chinese-simplified = []
chinese-traditional = []
czech = []
french = []
italian = []
japanese = []
korean = []
spanish = []

all-languages = [
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "french",
    "italian",
    "japanese",
    "korean",
    "spanish"
]

[dependencies]
bitcoin_hashes = "0.9.4"

unicode-normalization = { version = "=0.1.9", optional = true }
rand = { version = "0.6.0", optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.6.0", optional = false }

