[package]
name = "bip39"
version = "1.0.1"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bip39/"
repository = "https://github.com/rust-bitcoin/rust-bip39/"
documentation = "https://docs.rs/bip39/"
description = "Library for BIP-39 Bitcoin mnemonic codes"
keywords = [ "crypto", "bitcoin", "bip39", "mnemonic" ]
readme = "README.md"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
default = [ "std" ]
std = [ "unicode-normalization", "serde/std" ]

# Note: English is the standard for bip39 so always included
chinese-simplified = []
chinese-traditional = []
czech = []
french = []
italian = []
japanese = []
korean = []
spanish = []

all-languages = [
    "chinese-simplified",
    "chinese-traditional",
    "czech",
    "french",
    "italian",
    "japanese",
    "korean",
    "spanish"
]

[dependencies]
bitcoin_hashes = { version = "0.11.0", default-features = false }
rand_core = "0.4.0"

unicode-normalization = { version = "=0.1.9", optional = true }
rand = { version = "0.6.0", optional = true }
serde = { version = "1.0", default-features = false, optional = true }
zeroize = {version = "1.5", features = ["zeroize_derive"], optional = true}

[dev-dependencies]
rand = { version = "0.6.0", optional = false }
bitcoin_hashes = "0.11.0" # enable default features for test

